Lib/test/test_import/__init__.py
@@ -670,11 +670,11 @@ class RelativeImportTests(unittest.TestCase):
 
         # Check relative import fails with only __package__ wrong
         ns = dict(__package__='foo', __name__='test.notarealmodule')
-        self.assertRaises(SystemError, check_relative)
+        self.assertRaises(ModuleNotFoundError, check_relative)
 
         # Check relative import fails with __package__ and __name__ wrong
         ns = dict(__package__='foo', __name__='notarealpkg.notarealmodule')
-        self.assertRaises(SystemError, check_relative)
+        self.assertRaises(ModuleNotFoundError, check_relative)
 
         # Check relative import fails with package set to a non-string
         ns = dict(__package__=object())
@@ -688,6 +688,27 @@ class RelativeImportTests(unittest.TestCase):
             from .os import sep
             self.fail("explicit relative import triggered an "
                       "implicit absolute import")
+
+    def test_import_from_non_package(self):
+        sys.path.insert(0, os.path.join(os.path.dirname(__file__), 'data', 'package2'))
+        try:
+            with self.assertRaises(ImportError):
+                import submodule1
+            self.assertNotIn('submodule1', sys.modules)
+            self.assertNotIn('submodule2', sys.modules)
+        finally:
+            del sys.path[0]
+
+    def test_import_from_unloaded_package(self):
+        sys.path.insert(0, os.path.join(os.path.dirname(__file__), 'data'))
+        try:
+            import package2.submodule1
+            package2.submodule1.submodule2
+        finally:
+            del sys.path[0]
+            del sys.modules['package2.submodule1']
+            del sys.modules['package2.submodule2']
+            del sys.modules['package2']
 
 
 class OverridingImportBuiltinTests(unittest.TestCase):
